# porter

./: .bulldozer.yml  .gitignore  .policy.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  porter.toml  renovate.json
.changeset/: README.md  aws-ecr-auth.md  capability-layer-actions.md  configurable-version-pr-title.md  cosign-signing.md  helm-dependency-build.md  idempotent-artifact-push.md  initial-release-porter-core-cli-subcommands-add-status-versi.md  oci-image-publish-command.md  structured-publish-manifest.md  version-groups-and-registries.md
.github/: zizmor.yml
.github/workflows/: ci.yml  codeql.yml  porter-release.yml  pr-status-self.yml  pr-status.yml  release.yml  setup-porter-test.yml  tag-on-version-merge.yml  version-self.yml  version.yml
actions/mint-porter-token/: action.yml
actions/porter-manifest/: action.yml  manifest.sh
actions/porter-manifest/tests/: manifest.bats
actions/porter-manifest/tests/stubs/: gh  porter
actions/porter-sign/: action.yml  sign.sh
actions/porter-sign/tests/: sign.bats
actions/porter-sign/tests/stubs/: cosign  gh  porter
actions/porter-tag/: action.yml  tag.sh
actions/porter-tag/tests/: tag.bats
actions/porter-tag/tests/stubs/: gh  git  porter
actions/setup-porter/: action.yml  setup.sh
actions/setup-porter/tests/: setup.bats
actions/setup-porter/tests/stubs/: curl
app/: README.md  manifest.yml  spec.yml
crates/porter-cli/: Cargo.toml
crates/porter-cli/src/: main.rs
crates/porter-cli/tests/: cli_dry_run.rs  version_workflow.rs
crates/porter-core/: Cargo.toml
crates/porter-core/src/: apply.rs  attest.rs  build.rs  changelog.rs  changeset.rs  config.rs  groups.rs  lib.rs  manifest.rs  matrix.rs  slug.rs  version.rs
crates/porter-core/src/versioned_files/: cargo_workspace.rs  helm_chart.rs  mod.rs  package_json.rs  regex_file.rs
docs/: artifact-kinds.md  getting-started.md  json-schemas.md  phases.md  runbooks.md  signing-and-trust.md
policy/: cluster-image-policy.example.yaml
schemas/: porter.toml.json
tools/: install-ruleset.sh
