[workspace]
resolver = "3"
members = ["crates/porter-core", "crates/porter-cli"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0"
repository = "https://github.com/tractorbeamai/porter"
authors = ["Tractorbeam <hi@tractorbeam.ai>"]

[workspace.dependencies]
porter-core = { path = "crates/porter-core" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
toml_edit = "0.23"
semver = { version = "1", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
hex = "0.4"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
indoc = "2"
tempfile = "3"
pretty_assertions = "1"
