[package]
name = "porter-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for porter — release-cutting tool for polyglot monorepos"
readme = "../../README.md"
keywords = ["release", "version", "monorepo", "changelog", "cargo"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
toml_edit.workspace = true
semver.workspace = true
regex.workspace = true
walkdir.workspace = true
time.workspace = true
sha2.workspace = true
flate2.workspace = true
tar.workspace = true
hex.workspace = true

[dev-dependencies]
indoc.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
